force-app/main/default/objects/Record_Signing__c/Record_Signing__c.object-meta.xml
<CustomObject>
    <label>Record Signing</label>
    <nameField>
        <displayFormat>Sign-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Signing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>