force-app/main/default/objects/Record_Signing__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Record Signing</relationshipLabel>
    <relationshipName>Record_Signing</relationshipName>
    <type>Lookup</type>
</CustomField>