force-app/main/default/objects/Record_Signing__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Id</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Record Signing</relationshipLabel>
    <relationshipName>Record_Signing</relationshipName>
    <type>Lookup</type>
</CustomField>