force-app/main/default/objects/Record_Signing__c/fields/Quote_Id_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id_CPQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Record Signing</relationshipLabel>
    <relationshipName>Record_Signing</relationshipName>
    <type>Lookup</type>
</CustomField>