force-app/main/default/objects/Record_Signing__c/fields/Signing_Request__c.field-meta.xml
<CustomField>
    <fullName>Signing_Request__c</fullName>
    <label>Signing Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>