force-app/main/default/objects/Record_Signing__c/fields/Signing_Response__c.field-meta.xml
<CustomField>
    <fullName>Signing_Response__c</fullName>
    <label>Signing Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>